--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-    "name": "template-node",
+    "name": "template-discord-bot",
     "version": "1.0.0",
-    "description": "Template for Node projects using TypeScript, ESLint and Prettier.",
+    "description": "Template for Discord bots using TypeScript, ESLint and Prettier.",
     "main": "build/index.js",
     "type": "module",
     "scripts": {
-        "rebuild": "npx rimraf build && npx tsc && echo Rebuild completed."
+        "rebuild": "npx rimraf build && npx tsc && echo Rebuild completed.",
+        "deploy-commands": "node build/deployCommands",
+        "deploy-commands-server": "node build/deployCommands --server"
     },
     "keywords": [],
     "author": "Minavoii",
     "license": "MIT",
     "devDependencies": {
+        "@types/luxon": "^3.3.2",
         "@types/node": "^20.8.5",
         "@typescript-eslint/eslint-plugin": "^6.7.5",
         "eslint": "^8.51.0",
@@ -21,5 +24,10 @@
         "eslint-plugin-promise": "^6.1.1",
         "prettier": "3.0.3",
         "typescript": "^5.2.2"
+    },
+    "dependencies": {
+        "discord.js": "^14.13.0",
+        "dotenv": "^16.3.1",
+        "luxon": "^3.4.3"
     }
 }
